interface/apps/audiobook/static/css/site.css
body {
	font-family:"Andale Mono","Open Sans",Helvetica, Arial, sans-serif;
	font-size:9pt;
	color:#333;
	margin:40px;
}
.invisible {
	color:#EEE;
}
#container {
	width:780px;
	margin:auto;
	position: relative;
}
#player {
	position: absolute;
	top: 50px;
	width:240px;
	float:left;
}
#book {
	float:right;
}
#sounds {
	padding:0;
	margin:0;
}
#sounds a {
	display: block; 
	width:20px;
	height:6px;
	border-width:1px;
	border-color: transparent;
	border-style: solid;
	margin-right:2px;
	margin-bottom: 2px;
	padding:0;
	overflow:hidden;
	font-size:0pt;
	float: left;
}
#sounds a.uploaded {
	border-color:#EEE;
}
#sounds a.uploaded:hover {
	background:#333;
}
#sounds a.empty {
	background: white;
}
#sounds a.empty:hover {
	background: red;
}
#sounds a.playing {
	background: black;
}
#page {
	font-family:"Andale Mono","Open Sans",Helvetica, Arial, sans-serif;
	font-size:7pt;
	position:fixed;
	display:none;
}


/*jplayer yo*/
div.jp-audio, div.jp-audio-stream, div.jp-video {

    border: 0;
}
div#jp_container_1.jp-audio {

    height: 50px;
    width: 780px;
}
div.jp-audio div.jp-type-single div.jp-interface {
	background-color: #FFF;
    height: 50px;
}

div.jp-audio ul.jp-controls {
    padding: 0;
    width: 260px;
}
div.jp-audio div.jp-type-single div.jp-progress {
	top:3px;
    left: 35px;
    width: 745px;
	height:5px;
}
div.jp-audio div.jp-type-single div.jp-time-holder {
	font-family:"Andale Mono","Open Sans",Helvetica, Arial, sans-serif;
	top:13px;
    left: 35px;
    width: 745px;
	color:#AAA;
}
div.jp-current-time, div.jp-duration {
    font-style: normal;
}
div.jp-play-bar {
    background: url("../blue.monday/invisible.buttons.png") repeat-x scroll 0 -218px transparent;
}
div.jp-seek-bar {
	background: url("../blue.monday/invisible.buttons.png") repeat-x scroll 0 -202px transparent;
}
a.jp-play {
	background: url("../blue.monday/invisible.buttons.png") 0 0 no-repeat;
}
a.jp-play:hover {
	background: url("../blue.monday/invisible.buttons.png") -41px 0 no-repeat;
}
a.jp-pause {
	background: url("../blue.monday/invisible.buttons.png") 0 -40px no-repeat;
	display: none;
}
a.jp-pause:hover {
	background: url("../blue.monday/invisible.buttons.png") -41px -40px no-repeat;
}
a.jp-play, a.jp-pause {
    height: 10px;
    width: 10px;
}
#upload_form {
	width:135px;
	padding:15px;
	overflow:hidden;
	position: relative;
}
#upload_form #id_audio_file {
	opacity:0;
}
#upload_form #id_page {
	display: none;
}
#upload_bg {
	position:absolute;
	top:100px;
	left:0px;
	border:1pt solid #EEE;
	border-radius:5px;
	background:white;
	z-index:101;
	width:236px;
	display: none;
}
#upload_bg #default_text {
	position:absolute;
	top:30px;
	left:15px;
	border:1pt solid #EEE;
	padding:4px 5px;
	width:195px;
}
#upload_form #file_submit {
	border:1pt solid #EEE;
}
#upload_form #file_submit:hover {
	background: #757575;
	color: white; 
}
#close {
	background:url("tiny_close.png") no-repeat;
	float:right;
	margin:15px 15px;
	width:5px;
	height:5px;
}
#close:hover {
	cursor:pointer;
}

